--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,9 @@
 // jsconfig.json
-
 {
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
+      "@hooks/*": ["./hooks/*"],
     }
   }
 }
