--- a/package.json
+++ b/package.json
@@ -8,16 +8,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
     "lint": "expo lint"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
     "expo": "~51.0.39",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
@@ -38,14 +31,19 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "babel-plugin-module-resolver": "^5.0.2",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.4",
-    "react-test-renderer": "18.3.1"
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~7.1.2",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-styled-components-a11y": "^2.2.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "prettier": "^3.4.2"
   },
   "private": true
 }
